--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,47 @@
-spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/bp_db
-    username: root
-    password:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  hikari:
-    connectionTimeout: 30000
-    idleTimeout: 600000
-    maxLifetime: 1800000
-  jpa:
-   database-platform: org.hibernate.dialect.MySQLDialect
+#spring:
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/bp_db
+#    username: root
+#    password:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#  hikari:
+#    connectionTimeout: 30000
+#    idleTimeout: 600000
+#    maxLifetime: 1800000
+#  jpa:
+#   database-platform: org.hibernate.dialect.MySQLDialect
     #database-platform: org.hibernate.dialect.Oracle9Dialect
+
+
+spring:
+  #Database connection timeout 10 min
+  jpa:
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.Oracle9Dialect
+    #database-platform: org.hibernate.dialect.MySQLDialect
+  hikari:
+    connection-timeout: 600000
+    minimum-idle: 5
+    maximum-pool-size: 100
+    idle-timeout: 600000
+    pool-name: SpringBoot-HikariCP
+    max-lifetime: 1800000
+    auto-commit: true
+    connection-test-query: SELECT 1
+    type: com.zaxxer.hikari.HikariDataSource
+    transaction-isolation: TRANSACTION_READ_UNCOMMITTED
+  datasource:
+    url: ''
+    username: ''
+    password: ''
+    driver-class-name: oracle.jdbc.OracleDriver
 
   batch:
     initialize-schema: always
     job:
       enabled: false
 
-#      spring.batch.initializer.enabled=false
+#   spring.batch.initializer.enabled=false
 #input=csv/member.csv
